--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.3.0",
     "react-parallax-tilt": "^1.7.245",
     "react-pdf": "^9.1.1",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
